Fix CentralizedModal layout issues

--- a/src/core/components/CentralizedModal.styl
+++ b/src/core/components/CentralizedModal.styl
@@ -50,6 +50,7 @@
     position absolute
     transform translateY(100%)
     transition transform .3s ease-in-out
+    width 100%
     will-change transform
     z-index 2
 
